<resources>
    <string name="app_name">Activity Lifecycle</string>
    <string name="test">test</string>
    <string name="since_installation">Num. of calls since installation</string>
    <string name="since_opening">Num. of calls since opening app</string>
    <string name="reset">RESET</string>
    <string name="zero">0</string>
    <string name="onCreate">onCreate</string>
    <string name="onStart">onStart</string>
    <string name="onResume">onResume</string>
    <string name="onPause">onPause</string>
    <string name="onStop">onStop</string>
    <string name="onRestart">onRestart</string>
    <string name="onDestroy">onDestroy</string>
</resources>
