<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/onDestroy3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/onDestroy"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/onRestart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/onStart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/onStart"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onResume"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/onCreate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/onResume3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/onResume"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onPause"
        app:layout_constraintStart_toEndOf="@+id/onStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/onCreate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/onCreate"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onStart"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/onPause3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/onPause"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onStop"
        app:layout_constraintStart_toEndOf="@+id/onResume"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/onStop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/onStop"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onRestart"
        app:layout_constraintStart_toEndOf="@+id/onPause"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/onRestart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/onRestart"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onDestroy"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/onStop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/onCreate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onStart"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/onStop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onRestart"
        app:layout_constraintStart_toEndOf="@+id/onPause"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/onPause2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onStop"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/onResume"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/onDestroy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/onRestart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/onRestart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onDestroy"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/onStop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/onStart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onResume"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/onCreate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/onResume2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onPause"
        app:layout_constraintStart_toEndOf="@+id/onStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#16CCBC"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onDestroy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onRestart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/onStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onResume"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onCreate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/onRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onDestroy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onStop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/onResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onPause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/onCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onStart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/onPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onStop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onResume"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/onStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#DF19DFA1"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onRestart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onPause"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/since_installation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/since_installation"
        app:layout_constraintBottom_toTopOf="@+id/onPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="18dp"
        android:text="@string/since_opening"
        app:layout_constraintBottom_toTopOf="@+id/onPause2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onPause" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#16B631"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onStop2" />


</androidx.constraintlayout.widget.ConstraintLayout>